# Largo

./: .gitignore  AGENTS.md  Cargo.toml  LISP_DOCS.md  README.md
core/: Cargo.toml  build.rs
core/rnbo_exported/: RNBO.cpp  RNBO.h
core/scripts/: main.scm
core/scripts/plugins/: 01_sensor_synth.scm  02_tutorial_demo.scm
core/src/: main.rs  rnbo_bridge.cpp
situ-core/: Cargo.toml  build.rs
situ-core/rnbo_exported/: RNBO.h
situ-core/scripts/: main.scm
situ-core/scripts/plugins/: 01_sensor_synth.scm
templates/: Cargo.toml  audio_io.rs  build_example.rs  cpp_ffi.rs  embedded_lisp.rs  ffi_example.cpp  lockfree_communication.rs  osc_receiver.rs  osc_sender.rs  plugin_template.scm
